--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,16 @@
         android:textSize="16sp"
         android:text="0" />
 
+    <TextView
+        android:id="@+id/price_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16sp"
+        android:layout_marginLeft="16sp"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        android:text="$0" />
+
     <Button
         android:id="@+id/button_id"
         android:layout_height="wrap_content"
