--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,48 +2,72 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="16sp"
+        android:layout_marginTop="16sp"
+        android:text="Quantity"
+        android:textAllCaps="true" />
+
+    <Button
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_marginTop="16sp"
         android:layout_marginLeft="16sp"
-        android:text="Quantity"
-        android:textAllCaps="true"/>
+        android:onClick="increment"
+        android:text="+"
+        android:textColor="#000000" />
 
     <TextView
         android:id="@+id/quantity_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16sp"
         android:layout_marginLeft="16sp"
+        android:text="0"
         android:textColor="#000000"
-        android:textSize="16sp"
-        android:text="0" />
+        android:textSize="16sp" />
+
+    <Button
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginLeft="16sp"
+        android:onClick="decrement"
+        android:text="-"
+        android:textColor="#000000" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16sp"
+        android:layout_marginTop="16sp"
+        android:text="Price"
+        android:textAllCaps="true" />
 
     <TextView
         android:id="@+id/price_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16sp"
         android:layout_marginLeft="16sp"
+        android:layout_marginTop="16sp"
+        android:text="$0"
         android:textColor="#000000"
-        android:textSize="16sp"
-        android:text="$0" />
+        android:textSize="16sp" />
 
     <Button
         android:id="@+id/button_id"
-        android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:layout_marginTop="16sp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="16sp"
-        android:textColor="#000000"
+        android:layout_marginTop="16sp"
+        android:onClick="submitOrder"
         android:text="Order"
         android:textAllCaps="true"
-        android:onClick="submitOrder"/>
+        android:textColor="#000000" />
 
 </LinearLayout>
