--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,42 +9,47 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16sp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="16sp"
         android:text="Quantity"
         android:textAllCaps="true" />
 
-    <Button
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="16sp"
-        android:layout_marginLeft="16sp"
-        android:onClick="increment"
-        android:text="+"
-        android:textColor="#000000" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginLeft="16sp"
+            android:onClick="decrement"
+            android:text="-"
+            android:textColor="#000000"/>
+
+        <TextView
+            android:id="@+id/quantity_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:text="0"
+            android:textColor="#000000"
+            android:textSize="16sp" />
+
+        <Button
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:onClick="increment"
+            android:text="+"
+            android:textColor="#000000"/>
+
+    </LinearLayout>
 
     <TextView
-        android:id="@+id/quantity_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16sp"
-        android:text="0"
-        android:textColor="#000000"
-        android:textSize="16sp" />
-
-    <Button
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginLeft="16sp"
-        android:onClick="decrement"
-        android:text="-"
-        android:textColor="#000000" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16sp"
-        android:layout_marginTop="16sp"
         android:text="Price"
         android:textAllCaps="true" />
 
@@ -53,8 +57,8 @@
         android:id="@+id/price_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:layout_marginLeft="16sp"
-        android:layout_marginTop="16sp"
         android:text="$0"
         android:textColor="#000000"
         android:textSize="16sp" />
@@ -63,11 +67,11 @@
         android:id="@+id/button_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:layout_marginLeft="16sp"
-        android:layout_marginTop="16sp"
         android:onClick="submitOrder"
-        android:text="Order"
         android:textAllCaps="true"
-        android:textColor="#000000" />
+        android:text="Order"
+        android:textColor="#000000"/>
 
 </LinearLayout>
