--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,22 +84,22 @@
 
         </LinearLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16sp"
-            android:layout_marginTop="16sp"
-            android:text="Order Summary"
-            android:textAllCaps="true" />
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginLeft="16sp"-->
+<!--            android:layout_marginTop="16sp"-->
+<!--            android:text="Order Summary"-->
+<!--            android:textAllCaps="true" />-->
 
-        <TextView
-            android:id="@+id/order_summary_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16sp"
-            android:text="$0"
-            android:textColor="#000000"
-            android:textSize="16sp" />
+<!--        <TextView-->
+<!--            android:id="@+id/order_summary_text_view"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginLeft="16sp"-->
+<!--            android:text="$0"-->
+<!--            android:textColor="#000000"-->
+<!--            android:textSize="16sp" />-->
 
         <Button
             android:id="@+id/button_id"
