Added localization for spanish language

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
             android:id="@+id/name_field"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Name"
+            android:hint="@string/name"
             android:inputType="textCapWords" />
 
         <TextView
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16sp"
-            android:text="Toppings"
+            android:text="@string/toppings"
             android:textAllCaps="true" />
 
         <CheckBox
@@ -32,7 +32,7 @@
             android:textSize="16sp"
             android:layout_marginLeft="16dp"
             android:paddingLeft="24dp"
-            android:text="Whipped cream"
+            android:text="@string/whipped_cream"
             android:textAppearance="?android:textAppearanceMedium" />
 
         <CheckBox
@@ -42,14 +42,14 @@
             android:textSize="16sp"
             android:layout_marginLeft="16dp"
             android:paddingLeft="24dp"
-            android:text="Chocolate"
+            android:text="@string/chocolate"
             android:textAppearance="?android:textAppearanceMedium" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
-            android:text="Quantity"
+            android:text="@string/quantity"
             android:textAllCaps="true" />
 
         <LinearLayout
@@ -109,7 +109,7 @@
             android:layout_marginLeft="16sp"
             android:onClick="submitOrder"
             android:textAllCaps="true"
-            android:text="Order"
+            android:text="@string/order"
             android:textColor="#000000"/>
 
     </LinearLayout>
